[gd_scene load_steps=10 format=3 uid="uid://7wsq8muok7u3"]

[ext_resource type="Script" path="res://other_objects/barrier.gd" id="1_bo5rp"]
[ext_resource type="PackedScene" uid="uid://bcsnulyrjoclq" path="res://other_objects/interaction_collider.tscn" id="2_6ewat"]
[ext_resource type="AudioStream" uid="uid://cqnu4khyosoem" path="res://assets/sounds/barrier.wav" id="3_ngani"]
[ext_resource type="AudioStream" uid="uid://bini263aga0sn" path="res://assets/sounds/disruptor.wav" id="4_gowrg"]

[sub_resource type="BoxShape3D" id="BoxShape3D_sdp4g"]
size = Vector3(3, 10, 3)

[sub_resource type="PrismMesh" id="PrismMesh_e0ker"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_i4fu0"]
height = 5.0
radius = 5.0

[sub_resource type="BoxShape3D" id="BoxShape3D_f0koa"]
size = Vector3(1, 8, 18)

[sub_resource type="PlaneMesh" id="PlaneMesh_oril5"]

[node name="Barrier" type="StaticBody3D"]
script = ExtResource("1_bo5rp")

[node name="MainPillar" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
shape = SubResource("BoxShape3D_sdp4g")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MainPillar"]
transform = Transform3D(3, 0, 0, 0, 10, 0, 0, 0, 3, 0, 0, 0)
mesh = SubResource("PrismMesh_e0ker")
skeleton = NodePath("../..")

[node name="InteractionTrigger" parent="MainPillar" instance=ExtResource("2_6ewat")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="CollisionShape3D" parent="MainPillar/InteractionTrigger" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0)
shape = SubResource("CylinderShape3D_i4fu0")

[node name="Pillar" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -20)
shape = SubResource("BoxShape3D_sdp4g")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pillar"]
transform = Transform3D(3, 0, 0, 0, 10, 0, 0, 0, 3, 0, 0, 0)
mesh = SubResource("PrismMesh_e0ker")
skeleton = NodePath("../..")

[node name="Wall" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, -10)
shape = SubResource("BoxShape3D_f0koa")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wall"]
transform = Transform3D(-1.74846e-07, 1, 0, -4, -4.37114e-08, 0, 0, 0, 9, 0, 0, 0)
mesh = SubResource("PlaneMesh_oril5")
skeleton = NodePath("../..")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Wall"]
stream = ExtResource("3_ngani")
attenuation_model = 3
autoplay = true
max_distance = 25.0
bus = &"World"

[node name="DisruptorAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_gowrg")
bus = &"World"

[editable path="MainPillar/InteractionTrigger"]
